minor code fix, and few comments to make it readable

--- a/99_wordanim/style.css
+++ b/99_wordanim/style.css
@@ -1,3 +1,4 @@
+/* set defaults */
 * {
     margin: 0;
     padding: 0;
@@ -18,10 +19,14 @@ line-height: 100vh;
 
 span {
     opacity: 0;
-    transition: all 0.4s ease;
+    transition: all 1s ease;
+    transform: translateY(20px);
+    display: inline-block;
 }
 
 span.fade {
     opacity: 1;
+    transform: translateY(0px);
 }
+
 
